# miscellaneous

./: 1.3.15.cpp  1.4.15.cpp  Exported-2018-02-27.vssettings  Exported.vssettings  Linux-LaTeX.sublime-build  Preferences.sublime-settings  Ubuntu-C++-build-system.json  Windows-C++.sublime-build  abbyy-presentation.md  c++-questions.md
Moscow-Subregional-2016/: A.cpp  G.cpp
contests/ChampionshipBackendFinal/: 02.cpp  05.cpp  07.cpp  08.cpp  CMakeLists.txt
contests/ChampionshipBackendQual/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt
contests/ShadContest/: 1.cpp  2.cpp  5.cpp  CMakeLists.txt
contests/ShadOnlineTest/: CMakeLists.txt  J.cpp  K.cpp  L.cpp
contests/TFSchoolSummer2019Contest/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt
contests/TinkoffInternship2018Contest/: Problem1.cpp  Problem4.cpp  Problem6.cpp
contests/YandexInternship2018/: 1.cpp  3.cpp  6.cpp  CMakeLists.txt
contests/moscow-subregional-2016/: B.cpp  L.cpp
cpp/: acos-for-svinkapeppa.c  bit-pointers.cpp  c++-questions.md  growth-and-maxload-factors.cpp  quicksort-killer.cpp  reference-semantics.cpp
cpp/stepic/: 1.3.15.cpp
fp/: Haskell1.hs
internships/YandexInternship2018/: 2.cpp  4.cpp  5.cpp  CMakeLists.txt
internships/jetbrains-phpstorm/: binary-tree-1.cpp  binary-tree-3.cpp
internships/jetbrains-toolbox/: bracket-balance.cpp
internships/tinkoff/: Problem2.cpp  Problem3.cpp  Problem5.cpp  Problem7.cpp
jetbrains-internship-2018/php-profiler/: step-2.hpp
jetbrains-internship-2018/toolbox/: singly-linked-list.cpp
school-31/algorithms/: (-)list.cpp  bfs.cpp  bin_search.cpp  bubble_sort.cpp  count_inversions.cpp  counting_sort.cpp  dfs.cpp  dijkstra.cpp  dsu.cpp  fenwick_tree.cpp  floyd_warshall.cpp  ford-bellman.cpp  insertion_sort.cpp  kth_order_statistics.cpp  max_heap.cpp  merge_sort.cpp  min_heap.cpp  mst_kruskal.cpp  mst_prim.cpp  prefix_function.cpp  queue.cpp  quick_sort.cpp  scc.cpp  segment_tree.cpp  segments_intersect.cpp  selection_sort.cpp  simplex.cpp  stack.cpp  topological_sort.cpp
school-31/logic-calculator/: arg.html  argument.js  conseq.html  consequence.js  createtable.js  equiv.html  equivalence.js  help.html  logiccalculator.html  logiccalculator.js  nf.js  nform.html  normalform.js  prem.html  stylecalc.css  table.html
school-31/smth-from-usb/: 1612numA.cpp  A.cpp  (+3 more)
sublime-text-3/: LaTeXTools.sublime-settings  Package Control.sublime-settings  Preferences.sublime-settings  Windows-C++.sublime-build
(+901 files in other folders)
