cmake_minimum_required(VERSION 3.14)
project(ChampionshipBackendQual)

set(CMAKE_CXX_STANDARD 17)

add_executable(ChampionshipBackendQual1 1.cpp)
add_executable(ChampionshipBackendQual2 2.cpp)
add_executable(ChampionshipBackendQual3 3.cpp)
add_executable(ChampionshipBackendQual4 4.cpp)
add_executable(ChampionshipBackendQual5 5.cpp)
add_executable(ChampionshipBackendQual6 6.cpp)
