cmake_minimum_required(VERSION 3.14)
project(TFSchoolSummer2019Contest)

set(CMAKE_CXX_STANDARD 17)

add_executable(TFSchoolSummer2019Contest1 1.cpp)
add_executable(TFSchoolSummer2019Contest2 2.cpp)
add_executable(TFSchoolSummer2019Contest3 3.cpp)
add_executable(TFSchoolSummer2019Contest4 4.cpp)
add_executable(TFSchoolSummer2019Contest5 5.cpp)
