cmake_minimum_required(VERSION 3.13)
project(YandexInternship2018)

set(CMAKE_CXX_STANDARD 17)

add_executable(YandexInternship20181 1.cpp)
add_executable(YandexInternship20182 2.cpp)
add_executable(YandexInternship20183 3.cpp)
add_executable(YandexInternship20184 4.cpp)
add_executable(YandexInternship20185 5.cpp)
add_executable(YandexInternship20186 6.cpp)
