cmake_minimum_required(VERSION 3.13)
project(YandexInternship2018)

set(CMAKE_CXX_STANDARD 17)

add_executable(ShadOnlineTestA 1.cpp)
add_executable(ShadOnlineTestB 2.cpp)
add_executable(ShadOnlineTestC 3.cpp)
add_executable(ShadOnlineTestD 4.cpp)
add_executable(ShadOnlineTestE 5.cpp)
add_executable(ShadOnlineTestF 6.cpp)
